--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ READ_TIMEOUT=60
 WRITE_TIMEOUT=60
 
 DB_CONNECTION=mysql
-DB_PREFIX=blog_
+DB_PREFIX=
 DB_USERNAME=root
 DB_PASSWORD=
 DB_HOST=127.0.0.1
