--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
+# 前台端口
+FRONTEND_PORT=8000
+
+# 后台端口
+BACKGROUND_PORT=8080
+
+# 数据库配置
+DB_CONNECTION=mysql
+DB_HOST=db
+DB_DATABASE=homestead
+DB_PORT=3306
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+DB_PREFIX=
+
 RUN_MODE=release
 
 PAGE_SIZE=10
@@ -7,10 +22,9 @@ HTTP_PORT=8000
 READ_TIMEOUT=60
 WRITE_TIMEOUT=60
 
-DB_CONNECTION=mysql
-DB_PREFIX=
-DB_USERNAME=root
-DB_PASSWORD=
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=gin_blog
+ES_HOST=http://elasticsearch:9200
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
+REDIS_PREFIX=lumen_cache:
