--- a/.env
+++ b/.env
@@ -6,12 +6,19 @@ BACKGROUND_PORT=8080
 
 # 数据库配置
 DB_CONNECTION=mysql
-DB_HOST=db
-DB_DATABASE=homestead
+DB_HOST=localhost
+DB_DATABASE=gin_blog
 DB_PORT=3306
-DB_USERNAME=homestead
-DB_PASSWORD=secret
+DB_USERNAME=root
+DB_PASSWORD=
 DB_PREFIX=
+
+#DB_HOST=db
+#DB_DATABASE=homestead
+#DB_PORT=3306
+#DB_USERNAME=homestead
+#DB_PASSWORD=secret
+#DB_PREFIX=
 
 RUN_MODE=release
 
@@ -22,9 +29,9 @@ HTTP_PORT=8000
 READ_TIMEOUT=60
 WRITE_TIMEOUT=60
 
-ES_HOST=http://elasticsearch:9200
+ES_HOST=http://localhost:9200
 
-REDIS_HOST=redis
+REDIS_HOST=127.0.0.1
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PREFIX=lumen_cache:
