--- a/.env
+++ b/.env
@@ -32,6 +32,11 @@ WRITE_TIMEOUT=60
 ES_HOST=http://localhost:9200
 
 REDIS_HOST=127.0.0.1
-REDIS_PORT=6379
+REDIS_PORT=16379
 REDIS_DB=0
 REDIS_PREFIX=lumen_cache:
+
+
+OAUTH_REDIRECT_URL=
+OAUTH_CLIENT_ID=8fd6f41dcfc1001089c7
+OAUTH_CLIENT_SECRET=3ea90857a5524407654ed9ddcceacf82a429e9ad
