--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ RUN_MODE=release
 PAGE_SIZE=10
 JWT_SECRET=23347$040412
 
-HTTP_PORT=8000
+HTTP_PORT=8001
 READ_TIMEOUT=60
 WRITE_TIMEOUT=60
 
@@ -40,3 +40,5 @@ REDIS_PREFIX=lumen_cache:
 OAUTH_REDIRECT_URL=
 OAUTH_CLIENT_ID=8fd6f41dcfc1001089c7
 OAUTH_CLIENT_SECRET=3ea90857a5524407654ed9ddcceacf82a429e9ad
+
+FRONT_DOMAIN=http://localhost:8088
