--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ DB_PREFIX=
 #DB_PASSWORD=secret
 #DB_PREFIX=
 
-DEBUG=true
+DEBUG=false
 
 PAGE_SIZE=10
 JWT_SECRET=23347$040412
@@ -32,7 +32,7 @@ WRITE_TIMEOUT=60
 ES_HOST=http://localhost:9200
 
 REDIS_HOST=127.0.0.1
-REDIS_PORT=16379
+REDIS_PORT=6379
 REDIS_DB=0
 REDIS_PREFIX=lumen_cache:
 
@@ -42,3 +42,9 @@ OAUTH_CLIENT_ID=8fd6f41dcfc1001089c7
 OAUTH_CLIENT_SECRET=3ea90857a5524407654ed9ddcceacf82a429e9ad
 
 FRONT_DOMAIN=http://localhost:8088
+
+#MQ
+MQ_USERNAME=guest
+MQ_PASSWORD=guest
+MQ_HOST=localhost
+MQ_PORT=5672
